fixed some spacing issues with footer, and h1 tags

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,7 @@
 body {
-    background-image: url("../images/concrete_seamless.png")
+    background-image: url("../images/concrete_seamless.png");
+    margin: 0;
+    padding: 0;
 }
 /*Header*/
 header {
@@ -17,9 +19,10 @@ header {
 .hname {
     background: #4aaaa5;
     float: left;
-    padding: 15px;
-    margin-left: 0px;
+    padding: 0px 15px;
+    margin: 0;
     color: #ffffff;
+    line-height: 3em;
 }
 .hlinks {    
     float: right;
@@ -34,13 +37,16 @@ header {
     border: solid #dddddd;
     background: #ffffff;
     padding: 0px 15px 15px 15px;
+    margin-bottom: 2em;
    
 }
 
 .aboutme h1 {
     color: #4aaaa5;
     border-bottom: solid #cccccc;
-    padding: 15px 15px 15px 15px;
+    line-height: 2.5em;
+    /* margin-left: 15px; */
+    margin-top: 0px;
 }
 
 img {
@@ -83,9 +89,8 @@ p {
 
 /*Footer*/
 .footer {
-    position: fixed;
+    position: absolute;
     left: 0;
-    bottom: 0;
     width: 100%;
     background: #666666;
     text-align: center;
